@@ -226,6 +226,12 @@ void edgex_device_populateConfig
       GET_CONFIG_STRING(Host, endpoints.metadata.host);
       GET_CONFIG_UINT16(Port, endpoints.metadata.port);
     }
+    table = toml_table_in (subtable, "Logging");
+    if (table)
+    {
+      GET_CONFIG_STRING(Host, endpoints.logging.host);
+      GET_CONFIG_UINT16(Port, endpoints.logging.port);
+    }
   }
 
   table = toml_table_in (config, "Device");
@@ -275,7 +281,7 @@ void edgex_device_populateConfig
   if (table)
   {
     char *levelstr = NULL;
-    GET_CONFIG_STRING(RemoteURL, logging.remoteurl);
+    GET_CONFIG_BOOL(EnableRemote, logging.useremote);
     GET_CONFIG_STRING(File, logging.file);
     toml_rtos2 (toml_raw_in (table, "LogLevel"), &levelstr);
     if (levelstr)
@@ -512,8 +518,8 @@ void edgex_device_populateConfigNV
     }
   }
 
-  svc->config.logging.remoteurl =
-    get_nv_config_string (config, "Logging/RemoteURL");
+  svc->config.logging.useremote =
+    get_nv_config_bool (config, "Logging/EnableRemote", false);
   svc->config.logging.file = get_nv_config_string (config, "Logging/File");
 }
 
@@ -591,7 +597,7 @@ edgex_nvpairs *edgex_device_getConfig (const edgex_device_service *svc)
     result = pair;
   }
 
-  PUT_CONFIG_STRING(Logging/RemoteURL, logging.remoteurl);
+  PUT_CONFIG_BOOL(Logging/EnableRemote, logging.useremote);
   PUT_CONFIG_STRING(Logging/File, logging.file);
 
   result = makepair
@@ -645,8 +651,8 @@ void edgex_device_freeConfig (edgex_device_service *svc)
 
   free (svc->config.endpoints.data.host);
   free (svc->config.endpoints.metadata.host);
+  free (svc->config.endpoints.logging.host);
   free (svc->config.logging.file);
-  free (svc->config.logging.remoteurl);
   free (svc->config.service.host);
   free (svc->config.service.startupmsg);
   free (svc->config.service.checkinterval);
@@ -715,12 +721,18 @@ int edgex_device_handler_config
   json_object_set_number (dobj, "Port", svc->config.endpoints.data.port);
   json_object_set_value (cobj, "Data", dval);
 
+  JSON_Value *lsval = json_value_init_object ();
+  JSON_Object *lsobj = json_value_get_object (lsval);
+  json_object_set_string (lsobj, "Host", svc->config.endpoints.logging.host);
+  json_object_set_number (lsobj, "Port", svc->config.endpoints.logging.port);
+  json_object_set_value (cobj, "Data", lsval);
+
   json_object_set_value (obj, "Clients", cval);
 
   JSON_Value *lval = json_value_init_object ();
   JSON_Object *lobj = json_value_get_object (lval);
   json_object_set_string (lobj, "File", svc->config.logging.file);
-  json_object_set_string (lobj, "RemoteURL", svc->config.logging.remoteurl);
+  json_object_set_boolean (lobj, "EnableRemote", svc->config.logging.useremote);
   json_object_set_value (obj, "Logging", lval);
 
   JSON_Value *sval = json_value_init_object ();
